--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
   build:
     uses: axonivy-market/github-workflows/.github/workflows/ci.yml@v6
 
-  build-test:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4         # checkout the repo
-        - run: npm ci                       # install packages
-        - run: npm test                     # run tests (configured to use jest-junit reporter)
-        - uses: actions/upload-artifact@v4  # upload test results
-          if: ${{ !cancelled() }}           # run this step even if previous step failed
-          with:
-            name: test-results
-            path: jest-junit.xml
+  # build-test:
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #       - uses: actions/checkout@v4         # checkout the repo
+  #       - run: npm ci                       # install packages
+  #       - run: npm test                     # run tests (configured to use jest-junit reporter)
+  #       - uses: actions/upload-artifact@v4  # upload test results
+  #         if: ${{ !cancelled() }}           # run this step even if previous step failed
+  #         with:
+  #           name: test-results
+  #           path: jest-junit.xml
